--- a/WebApp/eShield-API/Pages/_ViewImports.cshtml
+++ b/WebApp/eShield-API/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using eShield_API.Areas.Identity
+@*@using eShield_API.Areas.Identity*@
 
 
 eShield_API.Pages
